--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "mysql2": "^3.9.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
